--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,18 @@
   </head>
 
   <body>
+    <nav class="navbar navbar-expand-sm bg-light">
+      <!-- Links -->
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <% if current_user.present? %>
+            <%= link_to 'logout', '/logout', method: :delete %>
+          <% else %>
+            <%= link_to 'login', '/login' if params[:controller] != 'sessions' %>
+          <% end %>
+        </li>
+      </ul>
+    </nav>
     <%= yield %>
-    <%= link_to 'logout', '/logout', method: :delete if current_user.present? %>
   </body>
 </html>
